--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_exit_confirmation_message">Press back again to exit the app</string>
+    <string name="height_m">Height: %1$s m</string>
+    <string name="weight_kg">Weight: %1$s kg</string>
+    <string name="pokemon_name">Pokemon Name</string>
+    <string name="hp">HP</string>
+    <string name="default_attribute_value">0</string>
+    <string name="attack">Attack</string>
+    <string name="defense">Defense</string>
+    <string name="connection_error">Connection error</string>
 </resources>
