--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
     <string name="app_name">TestPokeapi</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="app_exit_confirmation_message">Press back again to exit the app</string>
     <string name="height_m">Height: %1$s m</string>
@@ -11,4 +10,5 @@
     <string name="attack">Attack</string>
     <string name="defense">Defense</string>
     <string name="connection_error">Connection error</string>
+    <string name="sort_by_stats">Sort by stats(descending)</string>
 </resources>
